# NomuTrace

./: .gitignore  README.md
collector/: collector.py
firmware/: .clangd  .cproject  .project  CMakeLists.txt  LICENSE  NOTICE  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  boot_event.c  boot_event.h  config.h  event_queue.c  event_queue.h  heap_event.c  heap_event.h  idf_component.yml  main.c  sentinel_wire.h  socket_event.c  socket_event.h  stack_event.c  stack_event.h  transport.c  transport.h  wifi_event.c  wifi_event.h  wifi_sta.c  wifi_sta.h
